--- a/landpage.html
+++ b/landpage.html
@@ -19,29 +19,33 @@
       </ul>
     </nav>
   </header>
-  <section id="home">
-    <h1>Welcome to MyJourn</h1>
-    <p>Welcome to MyJourn, your personal journalling website. Here you can keep track of your thoughts, ideas, and
-      memories in a secure and user-friendly environment.</p>
-    <a href="signup.html" class="cta-button">Let's Go</a>
-  </section>
-  <section id="about">
-    <h2>About Us</h2>
-    <p>MyJourn was created with the vision of providing a safe and private space for individuals to document their personal journeys. Our platform is designed to be intuitive and accessible, ensuring that everyone can benefit from the practice of journalling.</p>
-  </section>
-  <section id="features">
-    <h2>Features</h2>
-    <ul>
-      <li>Secure and private journalling</li>
-      <li>Easy-to-use interface</li>
-      <li>Access from any device</li>
-      <li>Customizable themes</li>
-    </ul>
-  </section>
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>If you have any questions or feedback, feel free to <a href="mailto:support@myjourn.com">contact us</a>.</p>
-  </section>
+  <main>
+    <section id="home">
+      <h1>Welcome to MyJourn</h1>
+      <p>Welcome to MyJourn, your personal journalling website. Here you can keep track of your thoughts, ideas, and
+        memories in a secure and user-friendly environment.</p>
+      <a href="signup.html" class="cta-button">Let's Go</a>
+    </section>
+    <section id="about">
+      <h1>About Us</h1>
+      <p>MyJourn was created with the vision of providing a safe and private space for individuals to document their
+        personal journeys. Our platform is designed to be intuitive and accessible, ensuring that everyone can benefit
+        from the practice of journalling.</p>
+    </section>
+    <section id="features">
+      <h1>Features</h1>
+      <ul>
+        <li>Secure and private journalling</li>
+        <li>Easy-to-use interface</li>
+        <li>Access from any device</li>
+        <li>Customizable themes</li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h1>Contact Us</h1>
+      <p>If you have any questions or feedback, feel free to <a href="mailto:support@myjourn.com">contact us</a>.</p>
+    </section>
+  </main>
 </body>
 
 </html>
