--- a/signup.html
+++ b/signup.html
@@ -9,52 +9,53 @@
 </head>
 
 <body>
-    <!-- Removed the section containing the image -->
-    <div class="wrapper">
-        <div class="title-text">
-            <div class="title">Welcome</div>
-        </div>
-        <div class="form-container">
-            <div class="slide-controls">
-                <input type="radio" name="slide" id="login" checked>
-                <input type="radio" name="slide" id="signup">
-                <label for="login" class="slide login">Login</label>
-                <label for="signup" class="slide signup">Signup</label>
-                <div class="slider-tab"></div>
+    <div class="background">
+        <div class="wrapper">
+            <div class="title-text">
+                <div class="title">Welcome</div>
             </div>
-            <div class="form-inner">
-                <form action="/submit_login" method="post" class="login">
-                    <div class="field">
-                        <input type="text" placeholder="Email Address" name="email" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Password" name="password" required>
-                    </div>
-                    <div class="pass-link"><a href="#">Forgot password?</a></div>
-                    <div class="field btn">
-                        <div class="btn-layer"></div>
-                        <input type="submit" value="Login">
-                    </div>
-                    <div class="signup-link">Not a member? <a href="#" id="signup-link">Signup now</a></div>
-                </form>
-                <form action="/submit_signup" method="post" class="signup">
-                    <div class="field">
-                        <input type="text" placeholder="Email Address" name="email" required>
-                    </div>
-                    <div class="field">
-                        <input type="text" placeholder="Username" name="username" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Password" name="password" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Confirm password" name="confirm-password" required>
-                    </div>
-                    <div class="field btn">
-                        <div class="btn-layer"></div>
-                        <input type="submit" value="Signup">
-                    </div>
-                </form>
+            <div class="form-container">
+                <div class="slide-controls">
+                    <input type="radio" name="slide" id="login" checked>
+                    <input type="radio" name="slide" id="signup">
+                    <label for="login" class="slide login">Login</label>
+                    <label for="signup" class="slide signup">Signup</label>
+                    <div class="slider-tab"></div>
+                </div>
+                <div class="form-inner">
+                    <form action="/submit_login" method="post" class="login">
+                        <div class="field">
+                            <input type="text" placeholder="Email Address" name="email" required>
+                        </div>
+                        <div class="field">
+                            <input type="password" placeholder="Password" name="password" required>
+                        </div>
+                        <div class="pass-link"><a href="#">Forgot password?</a></div>
+                        <div class="field btn">
+                            <div class="btn-layer"></div>
+                            <input type="submit" value="Login">
+                        </div>
+                        <div class="signup-link">Not a member? <a href="#" id="signup-link">Signup now</a></div>
+                    </form>
+                    <form action="/submit_signup" method="post" class="signup">
+                        <div class="field">
+                            <input type="text" placeholder="Email Address" name="email" required>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Username" name="username" required>
+                        </div>
+                        <div class="field">
+                            <input type="password" placeholder="Password" name="password" required>
+                        </div>
+                        <div class="field">
+                            <input type="password" placeholder="Confirm password" name="confirm-password" required>
+                        </div>
+                        <div class="field btn">
+                            <div class="btn-layer"></div>
+                            <input type="submit" value="Signup">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -76,7 +77,7 @@
             sliderTab.style.left = '0';
         }
     });
-    
+
     signupLink.addEventListener('click', (e) => {
         e.preventDefault();
         signupRadio.checked = true;
